app/styles/app.scss
@import 'normalize';
@import 'ember-modal-dialog/ember-modal-structure';
@import 'ember-modal-dialog/ember-modal-appearance';

@mixin button {
  color: white;
  height: 48px;
  border: none;
  border-radius: 4px;
  outline: none;
  background-color: #005eb8;
  padding: 1rem;
  width: 100%;
  transition: opacity .5s;

  &:focus {
    outline: none;
  }

  &:disabled {
    opacity: 0.25;
  }
}

html * {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  color: #292929;
}

html, body {
  margin: 0;
  height: 100vh;
  min-height: 100%;
}

.application {
  height: 100%;
}

.top-bar {
  height: 80px;
  display: flex;
  overflow: hidden;
  box-sizing: border-box;
  padding: 0 1rem;
  margin: auto;
  width: 100vw;
  max-width: 64rem;
  border-bottom: 2px solid #2c98ff;
}

.app-name {
  margin-left: 1rem;
  color: #003e78;
  font-size: 1rem;
  align-self: center;
}

.page {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  max-width: 876px;
  height: calc(100% - 5rem);
  margin: auto;

  &_icon {
    position: relative;
    height: 32px;
    width: 32px;
    top: .5rem;
  }

  &_header {
    font-weight: 600;
    color: #003e78;
    margin-bottom: 1rem;
    width: 100%;
    line-height: 2;
  }
}

.cards-container {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 0 0.01rem 1rem;
  background-color: rgba(216,216,216, 0.3);

  &--wards {
    display: flex;
    flex-wrap: wrap;
  }
}

.wards {
  &_container {
    flex-grow: 1;
    padding: 1rem;
    background-color: #003e78;
  }

  &_header {
    color: white;
    font-size: 1.5rem;
    font-weight: 600;
    padding-top: .5rem;

    &--container {
      display: flex;
      justify-content: space-between;
      width: 100%;
      margin-bottom: 1.5rem;
    }
  }

  &_link {
    &--arrow {
      position: relative;
      top: -.2rem;
      left: 1rem;
    }

    &--button {
      border-radius: 4px;
      background-color: white;
      height: 48px;
      width: 124px;
      text-align: center;
      line-height: 3.2;
      text-decoration: none;
      color: #005eb8;
    }

    &--container {
      width: 3rem;
    }
  }

  &_body-text {
    color: white;
  }

  &_card {
    display: flex;
    justify-content: space-between;
    height: 1.125rem;
    background-color: white;
    padding: 1rem;
    line-height: 1;
    border-bottom: 2px solid #d8d8d8;

    &--ward-name {
      width: 30%;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    &--beds {
      &-number {
        line-height: 0.75;
        font-size: 1.5rem;
        min-width: 53px;
        text-align: center;
      }

      &-text {
        font-size: .75rem;
        line-height: 1.5;
      }
    }

  }
}

.card {
  background-color: white;
  width: calc(100% - 2rem);
  max-width: 382px;
  border-radius: 4px;
  padding: 1rem;
  margin-bottom: 1rem;
  margin-right: 1rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  @media (min-width: 450px) {
    max-width: 20.5rem;
  }

  @media (min-width: 769px) {
    max-width: 382px;
  }

  &_last-card {
    padding-right: 0;
  }

  &_header {
    width: 100%;
    height: 2rem;
    font-size: 12px;
    font-weight: 600;
    display: flex;

    &-text {
      font-size: 12px;
      margin: 0 .5rem;
      font-weight: normal;
      height: 1.5rem;
      align-self: center;
    }
  }

  &_data-block {
    width: 98px;
    height: 72px;

    &--value {
      font-size: 32px;
      font-weight: 600;
    }

    &--label {
      font-size: 12px;
    }
  }

  &_btn {
    background: none;
    color: #005eb8;
    position: relative;
    top: -7.5rem;
    left: 90%;
    width: 2rem;
    height: 1rem;
    padding: 0;

    &.register {
      width: 8rem;
      top: -7.5rem;
      left: 53%;

      &.open {
        width: 2rem;
        top: 1.1rem;
        left: 90%;
      }
    }
  }

  &_icon {
    position: relative;
    width: 24px;
    height: 24px;
  }
}

// .edit-beds {
//   &_form {
//     padding: 1rem 2rem;

//     &.total-beds {
//       padding: 0;
//       width: 100%;
//     }
//   }

//   &_input.form_input {
//     line-height: 2.5;
//     margin-top: 0;
//   }

//   &_subheader {
//     font-weight: 600;
//     line-height: 1.5;
//     color: #333333;
//     margin-bottom: 1.5rem;
//   }

//   &_help-text {
//     font-size: 12px;
//     line-height: 1.33;
//     color: #737373;
//     margin-bottom: 1rem;

//     &.bold {
//       font-size: 16px;
//       font-weight: 600;
//       color: black;
//     }

//     &.error {
//       font-weight: 600;
//       color: red;
//     }
//   }

//   &_radio {
//     display: flex;
//     line-height: 1;
//     margin-bottom: 1rem;

//     &--label {
//       line-height: 1.5;
//     }

//     &--text {
//       color: #333333;
//     }
//   }
// }

.form {
  margin: auto;
  padding: 1rem;
  background-color: white;
  border-radius: 5px;
  position: relative;
  top: 10rem;
  width: 80vw;
  max-width: 21rem;

  &_header {
    font-size: 1.5rem;
    font-weight: 600;
    margin-bottom: 2.5rem;
  }

  &_add {
    top: 0;
    max-width: 311px;
    margin: 1rem auto;
  }

  &_label {
    display: flex;
    width: 100%;
    font-weight: bold;

    span {
      padding-left: .5rem;
      color: #737373;
    }
  }

  &_input {
    border: none;
    box-sizing: border-box;
    padding-bottom: 4px;
    border-bottom: 1px solid #005eb8;
    margin: 1rem 0;
    width: 100%;

    &:focus {
      padding-bottom: 3px;
      outline: none;
      border-bottom: 2px solid #003e78;
    }
  }

  &_help-text {
    font-size: 12px;
    line-height: 1.33;
    color: #737373;
    margin-bottom: 2.5rem;
  }

  &_error {
    font-size: 12px;
    color: red;
    &--container {
      height: 40px;
    }
  }

  &_btn {
    @include button;
  }
}

canvas {
  margin: auto;
  display: flex;
}
/* ... */

